# ai_devs_3_reloaded_tasks

./: .env.template  Makefile  README.md  pyproject.toml  pyrightconfig.json
.cursor/: rules.md
scripts/: poligon.py  s01e01.py  s01e02.py  s01e03.py
src/utils/: centrala.py  centrala.pyi  llm.py  llm.pyi
